--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ rust:
   - 1.0.0
   - 1.1.0
 script:
-  - cargo build --verbose --all
-  - cargo test --verbose --all
+  - cargo build
+  - cargo test
